# ecomerce

./: .gitignore  Dockerfile  README.md  docker-compose-prod.yaml  docker-compose.yaml  pyproject.toml  pytest.ini
src/: schema.yml
src/apps/products/: admin.py  models.py  urls.py
src/apps/products/api/: routers.py  serializers.py  views.py
src/apps/products/tests/: test_model.py
src/core/: urls.py
src/core/settings/: base.py  development.py  testing.py
tests/: conftest.py  factories.py
